--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@tailwindcss/vite": "^4.0.13",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.479.0",
+    "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.3.0",
     "tailwindcss": "^4.0.13"
   },
   "devDependencies": {
