--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.13",
     "framer-motion": "^12.5.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.479.0",
     "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.3.0",
+    "recharts": "^2.15.1",
     "tailwindcss": "^4.0.13"
   },
   "devDependencies": {
