--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.13",
+    "d3-geo": "^3.1.1",
     "framer-motion": "^12.5.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.479.0",
@@ -19,8 +20,11 @@
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.3.0",
+    "react-simple-maps": "^3.0.0",
+    "react-tooltip": "^5.28.0",
     "recharts": "^2.15.1",
-    "tailwindcss": "^4.0.13"
+    "tailwindcss": "^4.0.13",
+    "world-atlas": "^2.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
